Update to JDK25 / Javafx 25