@@ -7,21 +7,21 @@
 
     <groupId>org.photoslide</groupId>
     <artifactId>PhotoSlide</artifactId>
-    <version>1.5.8-RELEASE</version>   
+    <version>1.5.9-RELEASE</version>   
 
     <!-- This description text is included in the Windows installer by default, see win-jpackage.txt -->
     <description>Photoslide is an app for managing and editing photos like Lightroom/ON1/...</description>
 
     <properties>
-        <javafx.version>24.0.2</javafx.version>
+        <javafx.version>25.0.1</javafx.version>
         <mainClass>org.photoslide.App</mainClass>
         <app.name>Photoslide</app.name>        
         <maven.build.timestamp.format>yy.ww.WWkkmm</maven.build.timestamp.format>
-        <app.version>1.5.8</app.version>        
+        <app.version>1.5.9</app.version>        
         <jvm.modules>javafx.media,javafx.controls,javafx.fxml,javafx.graphics,javafx.base,javafx.swing,javafx.web,java.base,jdk.management,java.naming,java.sql,java.transaction.xa,java.xml,jdk.unsupported,java.management,java.datatransfer,java.desktop,java.security.jgss,java.xml.crypto,jdk.javadoc,java.logging,jdk.charsets,java.se,java.net.http,java.prefs,jdk.crypto.ec,jdk.crypto.cryptoki,jdk.localedata,java.compiler,jdk.net,java.instrument,java.scripting,java.rmi</jvm.modules>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>24</maven.compiler.source>
-        <maven.compiler.target>24</maven.compiler.target> 
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>25</maven.compiler.target> 
         <!-- UUID via https://www.uuidgenerator.net -->
         <windows.upgrade.uuid>5be0a831-ee20-4692-8c71-6616381d9ccf</windows.upgrade.uuid>        
         <windows.vendor>ITArchitects</windows.vendor>        
@@ -199,12 +199,12 @@
         <dependency>
             <groupId>org.librawfx</groupId>
             <artifactId>LibRawFX</artifactId>
-            <version>1.9.1</version>
+            <version>1.9.4</version>
         </dependency>
         <dependency>  
             <groupId>org.libheiffx</groupId>    
             <artifactId>LibHeifFX</artifactId>  
-            <version>1.2.7</version>  
+            <version>1.2.9</version>  
         </dependency>
         <dependency>
             <groupId>com.gluonhq</groupId>
@@ -372,6 +372,7 @@
                             <mainClass>${mainClass}</mainClass>
                             <options>                                                                     
                                 <option>-XX:+UseZGC</option>
+                                <option>-XX:+UseCompactObjectHeaders</option>
                                 <option>-Xms2g</option>
                                 <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
@@ -387,8 +388,7 @@
                                 <option>--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>                                                                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>                                                                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>                                                      
-                                <option>--add-opens=java.base/java.net=ALL-UNNAMED</option>
-                                <option>--sun-misc-unsafe-memory-access=allow</option>
+                                <option>--add-opens=java.base/java.net=ALL-UNNAMED</option>                                
                             </options>
                         </configuration>                          
                     </execution>
@@ -399,6 +399,7 @@
                             <options>                                     
                                 <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>                                    
                                 <option>-XX:+UseZGC</option>
+                                <option>-XX:+UseCompactObjectHeaders</option>
                                 <option>-Xms2g</option>
                                 <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
@@ -414,8 +415,7 @@
                                 <option>--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>                                                                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>                                                                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>                                                      
-                                <option>--add-opens=java.base/java.net=ALL-UNNAMED</option>
-                                <option>--sun-misc-unsafe-memory-access=allow</option>
+                                <option>--add-opens=java.base/java.net=ALL-UNNAMED</option>                                
                             </options>
                         </configuration>
                     </execution>
@@ -426,6 +426,7 @@
                             <options>                                     
                                 <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>                                    
                                 <option>-XX:+UseZGC</option>
+                                <option>-XX:+UseCompactObjectHeaders</option>
                                 <option>-Xms2g</option>
                                 <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
@@ -441,8 +442,7 @@
                                 <option>--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>                                                                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>                                                                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>                                                      
-                                <option>--add-opens=java.base/java.net=ALL-UNNAMED</option>
-                                <option>--sun-misc-unsafe-memory-access=allow</option>
+                                <option>--add-opens=java.base/java.net=ALL-UNNAMED</option>                                
                             </options>
                         </configuration>
                     </execution>
@@ -452,6 +452,7 @@
                             <mainClass>${mainClass}</mainClass>
                             <options>
                                 <option>-XX:+UseZGC</option>
+                                <option>-XX:+UseCompactObjectHeaders</option>
                                 <option>-Xms2g</option>
                                 <option>--enable-preview</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>                        
@@ -467,8 +468,7 @@
                                 <option>--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>                                                                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>                                                                                
                                 <option>--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>                                                      
-                                <option>--add-opens=java.base/java.net=ALL-UNNAMED</option>
-                                <option>--sun-misc-unsafe-memory-access=allow</option>
+                                <option>--add-opens=java.base/java.net=ALL-UNNAMED</option>                                
                                 <option>${profiler.jvmargs.arg1}</option>
                                 <option>${profiler.jvmargs.arg2}</option>
                                 <option>${profiler.jvmargs.arg3}</option>
@@ -494,11 +494,11 @@
                     <version>3.11.0</version>
                     <configuration>
                         <enablePreview>true</enablePreview>
-                        <fork>true</fork>
+                        <fork>true</fork>                        
                         <compilerArgs>
                             <arg>--enable-preview</arg>
-                            <arg>-J--illegal-access=permit</arg>                               
-                        </compilerArgs>                                     
+                            <arg>-J--illegal-access=permit</arg>                            
+                        </compilerArgs>                        
                     </configuration>
                 </plugin>
                 <plugin>
